# IrrigationManager

./: Dockerfile  app.py  config.example.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish.yml
src/: base_plot.py  config.py  et_correction.py  field.py  irrigation.py  meteo.py  resample.py  scheduler.py  water_balance.py  workflow.py
src/database/: db.py  models.py
src/et0/: __init__.py  base.py  penman_daily.py
src/frontend/: app.py  dashboard.py  deps.py  fields.py  header.py  irrigation.py  table_editor.py
